Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15383

QmlProfiler: iOS: Sometimes failing to get profile data when profiling iOS device

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 3.6.0
    • Qt Creator 3.6.0-rc1
    • QML Profiler
    • OSX 10.10, QC 3.6rc snapshot (82cf0e60fb) based on Qt5.5.1, Kit: Qt5.4.1 (official release), Xcode 6, iPad
    • 35ed93fe2d8fbc2d5b2531edb4f3b32be55457ce e3c16259ed5297a3ee707d0aeade985ae103992e 983473163f0de7aea54d6d3e86d58ba8149a69dc

    Description

      Steps to reproduce:

      • create Qt Quick Application from template
      • switch to Analyzer -> QmlProfiler
      • start profiling

      Current result:

      • if the connection to the QmlDebugger succeeds without manually triggering a retry profiling seems to work without problems
      • if the connection to the QmlDebugger does not succeed on first try a messagebox comes up (Could not connect to the in-process QML profiler)
        • trigger 'Retry' (might come up again - do it again..)
        • Application Output states 'tryRemoteConnect succeeded...'
        • anyhow profiler does not start and does not gather any data

      Note: I tried this again and did not hit 'Retry' (just kept the messagebox open) and surprisingly the 'tryRemoteConnect succeeded...' was printed on the Application Output and the profiler started to gather data.
      If you now hit 'Cancel' on the messagebox the data gathering goes on, but on the cmdline you'll get a 'SOFT ASSERT: "!d->connection->isOpen()" in file /work/build/qt-creator/src/plugins/qmlprofiler/qmlprofilerclientmanager.cpp, line 304'

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes